--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 <body>
     <form>
         <label for="num">Escribe un numero</label>
-        <input type="number" id="num">
+        <input type="number" id="num"><span></span><br>
         <input type="button" value="Boton" onclick="ver()">
-        <span></span>
     </form>
     <table></table>
 </body>
